_assets/css/main.scss
@import "bootstrap/scss/bootstrap";

@import url(asset_path("font-awesome/css/font-awesome"));

@import url(asset_path("katex/dist/katex"));

$primary-font: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
$hf-font: "Roboto Mono", "Helvetica Neue", Helvetica, Arial, sans-serif;
$hf-color: #ffffff;
$hf-bg-color: #272935;
$href-color: #da4939;

@mixin transition($args...) {
    -webkit-transition: $args;
    -moz-transition: $args;
    -ms-transition: $args;
    -o-transition: $args;
    transition: $args;
}

html {
    position: relative;
    min-height: 100%;
}

body {
    font-family: $primary-font;
}

a {
    text-decoration: none !important;
    color: $href-color !important;
    border-bottom: 1px solid transparent;

    &:hover, &:active, &:focus {
        @include transition(border-bottom-color 0.2s);

        border-bottom-color: $href-color;
    }
}

.container {
    max-width: 950px;
}

.navbar {
    font-family: $hf-font;
    color: $hf-color !important;
    background: $hf-bg-color !important;

    .navbar-brand {
        color: $hf-color !important;
        font-size: 20px;
        text-decoration: none;
        border-bottom: none;
    }

    .nav-item {
        margin-left: 20px;

        &.active {
            font-weight: 900;
        }
    }

    .nav-link {
        color: $href-color !important;
        font-size: 16px;

        .link {
            color: inherit;
            text-decoration: none;
            text-transform: capitalize;
            padding-left: 2px;
            border-bottom: 2px solid transparent;

            &:hover, &:active, &:focus {
                @include transition(border-bottom-color 0.2s);

                border-bottom-color: $href-color;
            }
        }
    }
}

@include media-breakpoint-up(md) {
    .navbar {
        position: fixed;
        top: 0;
        left: 0;
        right: 0;
        z-index: $zindex-navbar;
    }

    body {
        padding-top: 65px;
    }
}


.content {
    padding-top: 1rem;
    padding-bottom: 1rem;

    h1, h2, h3, h4, h5, h6 {
        &:before {
            content: '#';
            color: $href-color;
            font-size: 0.85em;
            padding-right: 0.15em;
        }
    }

    h1, h2 {
        &:after {
            content: '';
            display: block;
            border: 0.5px solid $hf-bg-color;
        }
    }
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    font-family: $hf-font;
    font-size: 13px;
    color: $hf-color !important;
    background: $hf-bg-color !important;
    padding: 2rem 0;

    h6 {
        padding: 10px 0;
        font-size: 20px;
        text-transform: uppercase;

        &::before {
            content: '';
            position: absolute;
            top: 0;
            width: 2em;
            height: 2px;
            overflow: hidden;
            background: $hf-color;
        }
    }

    .contact {
        text-align: left;
        padding: 0 0 10px 0;

        li {
            display: inline-block;

            > a {
                display: inline-block;
                width: 32px;
                height: 32px;
                border-radius: 0.25em;
                border-bottom-color: transparent;
                color: $hf-bg-color !important;
                background-color: $hf-color;

                @include transition(color 0.2s);
                @include transition(background-color 0.2s);

                &:hover {
                    color: $hf-color !important;
                    background-color: $href-color;
                }

                i {
                    font-size: 16px;
                    width: 32px;
                    line-height: 32px;
                    text-align: center;
                }
            }
        }
    }

    .copyright {
        text-align: center;
    }
}

@include media-breakpoint-down(md) {
    .footer .col, .footer .contact {
        text-align: center;
    }
}


.equation {
    padding-bottom: 1rem;
    padding-top: 1rem;
    text-align: center;
    font-size: 1.5em;
}

